--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,9 @@
 ===================*/
 
 .avatar {
-  height: 30%;
-  border-radius: 20px;
-  border: 3px solid #90a0d9;
+  height: 35%;
+  border-radius: 30px;
+  border: 3px solid var(--clr-primary);
 }
 
 .link {
