--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 ===================*/
 
 .avatar {
-  height: 35%;
-  border-radius: 30px;
+  height: 30%;
+  border-radius: 20px;
   border: 3px solid var(--clr-primary);
 }
 
@@ -278,7 +278,7 @@ main {
   position: absolute;
   right: 0;
   left: 0;
-  top: 6em;
+  top: 5.2em;
   background-color: var(--clr-bg);
   width: 0;
   overflow: hidden;
@@ -291,6 +291,7 @@ main {
 
 .nav__list-item {
   margin: 0.5em 0;
+  line-height: 1;
 }
 
 .nav__hamburger {
