--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,10 @@ main {
   margin: 0.5em;
 }
 
+.posts {
+  padding-top: 2em;
+}
+
 .blog__grid {
   max-width: 1100px;
   margin: 0 auto;
@@ -332,10 +336,6 @@ main {
   background-color: transparent;
   font-size: 1.8rem;
   transition: transform 0.2s ease-in-out;
-}
-
-.section {
-  margin-top: 4em;
 }
 
 .nav__list {
