--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ main {
 }
 
 .blog {
-  padding: 2em;
+  padding-top: 2em;
   margin: 0 auto;
   text-align: center;
   box-shadow: var(--shadow);
