--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ main {
 }
 
 .project {
-  padding: 1.5em;
+  padding: 2em;
   margin: 0 auto;
   text-align: center;
   box-shadow: var(--shadow);
@@ -254,9 +254,9 @@ main {
   margin: 0.5em;
 }
 
-.posts {
+/* .posts {
   padding-top: 2em;
-}
+} */
 
 .blog__grid {
   max-width: 1100px;
@@ -267,7 +267,7 @@ main {
 }
 
 .blog {
-  padding: 3em;
+  padding: 2em;
   margin: 0 auto;
   text-align: center;
   box-shadow: var(--shadow);
