--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,7 @@ main {
 }
 
 .blog {
- /* padding: 2em; */
+  padding: 2em;
   margin: 0 auto;
   text-align: center;
   box-shadow: var(--shadow);
