--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,7 @@ main {
   padding: 3em;
   margin: 0 auto;
   text-align: center;
+  border-radius: 30px;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
 }
@@ -266,6 +267,7 @@ main {
   padding: 4em;
   margin: 0 auto;
   text-align: center;
+  border-radius: 30px;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
 }
