--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ main {
 
 .project {
   padding: 3em;
-  margin: 0 auto;
+  margin: 1em;
   text-align: center;
   border-radius: 30px;
   box-shadow: var(--shadow);
