--- a/css/styles.css
+++ b/css/styles.css
@@ -265,7 +265,7 @@ main {
 
 .blog {
   padding: 3em;
-  margin: 0 auto;
+  margin: 0.5em;
   text-align: center;
   border-radius: 30px;
   box-shadow: var(--shadow);
