--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ main {
 
 .project {
   padding: 3em;
-  margin: 1em;
+  /* margin: 1em; */
   text-align: center;
   border-radius: 30px;
   box-shadow: var(--shadow);
@@ -265,7 +265,7 @@ main {
 
 .blog {
   padding: 3em;
-  margin: 1em;
+  /* margin: 1em; */
   text-align: center;
   border-radius: 30px;
   box-shadow: var(--shadow);
