--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,7 @@ main {
 .skills__list {
   max-width: 450px;
   width: 95%;
-  margin: 0 auto;
+  margin-bottom: 2em;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
