--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ main {
 
 .about {
   flex-direction: column;
+  align-items: flex-start;
   margin-top: 3em;
 }
 
@@ -185,6 +186,61 @@ main {
 
 .about .btn--outline {
   margin-right: 1em;
+}
+
+.services__grid {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+  grid-gap: 2em;
+}
+
+.service {
+  padding: 3em;
+  margin: 1em;
+  text-align: center;
+  border-radius: 30px;
+  box-shadow: var(--shadow);
+  transition: transform 0.2s linear;
+}
+
+.service:hover {
+  transform: translateY(-7px);
+}
+
+.service__description {
+  margin-top: 1em;
+}
+
+.service__stack {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 1.2em 0;
+}
+
+.service__stack-item {
+  margin: 0.5em;
+  font-weight: 500;
+  font-size: 0.8rem;
+  color: var(--clr-fg-alt);
+}
+
+.service .link--icon {
+  margin-left: 0.5em;
+}
+
+/* .more__services {
+  padding: 2em;
+  margin-top: 0.5em;
+  text-align: center;
+} */
+
+.services__link {
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: var(--clr-fg);
 }
 
 .projects__grid {
@@ -362,11 +418,6 @@ main {
 .nav__hamburger {
   display: flex;
   margin-left: 0.8em;
-}
-
-.about {
-  align-items: flex-start;
-  margin-top: 2em;
 }
 
 .footer {
