--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,15 @@
 }
 
 .avatar {
-  height: 30%;
+  height: 40%;
   border-radius: 20px;
   border: 3px solid var(--clr-primary);
+  /* padding-left: 0.5rem; */
 }
 
 .link {
   color: var(--clr-primary);
-  padding: 0 0 0.3em 0;
+  padding: 0 0 0.3rem 0;
   position: relative;
 }
 
@@ -129,7 +130,7 @@
 }
 
 .header {
-  height: 5.5em;
+  height: 5em;
   max-width: 1100px;
   width: 95%;
   margin: 0 auto;
@@ -169,7 +170,7 @@ main {
 .about {
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 3em;
+  margin-top: 1em;
 }
 
 .about__name {
@@ -405,7 +406,7 @@ main {
 
 .nav__list {
   flex-direction: column;
-  padding: 4em 0;
+  padding: 1em 0;
   position: absolute;
   right: 0;
   left: 0;
