--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
   height: 40%;
   border-radius: 20px;
   border: 3px solid var(--clr-primary);
+  cursor: pointer;
   /* padding-left: 0.5rem; */
 }
 
